Fix landscape view on mobile devices (#234)
* FIx landscape view on mobile devices

* remove unneccessary padding and fix search

* fix hero-image

* adjustments

* test safe-area env values

* adjust nav-sidebar, main content and fix footer

* adjust nav-sidebar

* fix broken 0px values

* cleanup

* fix cache

* fix zero unit minify bug

* revert yarn.lock update

* fix nav-sidebar secondary menu

* fix typo

* fix indent sidebar menu items

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -129,6 +129,7 @@
 .navbar__brand strong {
   font-weight: 400;
 }
+
 .navbar__brand {
   font-size: 19px;
 }
@@ -136,6 +137,7 @@
 .navbar__link:hover {
   text-decoration: underline;
 }
+
 .navbar-sidebar .menu__link,
 .navbar-sidebar__back,
 .navbar__toggle {
@@ -157,5 +159,57 @@ table {
 @media (max-width: 996px) {
   .footer .row .col.col.col {
     flex: 1 0 !important;
+  }
+}
+
+/*
+  Make sure content isn't being covered by camera notch or UI elements on mobile.
+  Neccessary due to use of viewport-fit=cover to support landscape mode on phones etc.
+
+  Using 0.001px as 0px is minified to 0 which breaks min/max/calc.
+  TODO: Can't repro with local build, so possibly caused by Netlify cache. Try to remove later.
+*/
+@supports(padding: max(0px)) {
+  .navbar {
+    padding-top: max(var(--ifm-navbar-padding-vertical), env(safe-area-inset-top,0.001px));
+    padding-right: max(var(--ifm-navbar-padding-horizontal), env(safe-area-inset-right,0.001px));
+    padding-bottom: var(--ifm-navbar-padding-vertical);
+    padding-left: max(var(--ifm-navbar-padding-horizontal), env(safe-area-inset-left,0.001px));
+  }
+
+  .navbar-sidebar__brand {
+    padding-top: max(var(--ifm-navbar-padding-vertical), env(safe-area-inset-top, 0.001px));
+    padding-right: var(--ifm-navbar-padding-horizontal);
+    padding-bottom: var(--ifm-navbar-padding-vertical);
+    padding-left: max(var(--ifm-navbar-padding-horizontal), env(safe-area-inset-left, 0.001px));
+  }
+
+  .navbar-sidebar__item {
+    padding-left: max(0.5rem, env(safe-area-inset-left, 0.001px) - 0.5rem);
+  }
+
+  header > div.container,
+  main > .container {
+    padding-right: max(var(--ifm-spacing-horizontal), env(safe-area-inset-right,0.001px));
+    padding-left: max(var(--ifm-spacing-horizontal), env(safe-area-inset-left,0.001px));
+  }
+
+  .footer {
+    padding-top: var(--ifm-footer-padding-vertical);
+    padding-right: max(var(--ifm-footer-padding-horizontal), env(safe-area-inset-right,0.001px));
+    padding-bottom: max(var(--ifm-footer-padding-vertical), env(safe-area-inset-bottom,0.001px));
+    padding-left: max(var(--ifm-footer-padding-horizontal), env(safe-area-inset-left,0.001px));
+  }
+
+  @media (max-width: 996px) {
+    .footer {
+      /* calc/max/min breaks when this is set to 0 in default template */
+      --ifm-footer-padding-horizontal: 0px;
+    }
+
+    /* DocSearch is in absolute right position on smaller devices so navbar-padding doesn't affect it */
+    .DocSearch-Button {
+      margin-right: max(0.001px, env(safe-area-inset-right,0.001px) - var(--ifm-navbar-padding-horizontal));
+    }
   }
 }
